--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,26 +1,27 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.jovistar.caltxt">
+    package="com.jovistar.caltxt"
+    android:versionCode="51"
+    android:versionName="1.0">
 
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-    <!--    <uses-permission android:name="android.permission.WRITE_CONTACTS" />-->
-    <!--    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />-->
+<!--    <uses-permission android:name="android.permission.WRITE_CONTACTS" />-->
+<!--    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />-->
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
-    <!--    <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />-->
-    <!--    <uses-permission android:name="android.permission.WAKE_LOCK" />-->
+<!--    <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />-->
+<!--    <uses-permission android:name="android.permission.WAKE_LOCK" />-->
     <uses-permission android:name="android.permission.BROADCAST_STICKY" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-<!--    <uses-permission android:name="android.permission.ACCESS_COARSE_UPDATES" />-->
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_UPDATES" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
     <!-- commented for Google Policy Change<uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />-->
-<!--    <uses-permission android:name="android.permission.READ_DATA_STATE" />-->
+    <uses-permission android:name="android.permission.READ_DATA_STATE" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
 
@@ -74,8 +75,8 @@
         <activity
             android:name="com.jovistar.caltxt.activity.CaltxtToast"
             android:excludeFromRecents="true"
-            android:screenOrientation="portrait"
             android:taskAffinity=""
+            android:screenOrientation="portrait"
             android:theme="@style/CaltxtDialogTheme">
             <!-- <intent-filter>
                 <action android:name="android.intent.action.ANSWER" />
@@ -102,9 +103,9 @@
             android:taskAffinity=""></activity>
         <activity
             android:name="com.jovistar.caltxt.activity.ToastRuleAction"
-            android:excludeFromRecents="false"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
+            android:excludeFromRecents="false"
             android:taskAffinity=""
             android:theme="@style/Theme.AppCompat.Translucent"></activity>
         <activity
@@ -122,19 +123,19 @@
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan"></activity>
-        <!--        07112019, changed to adjustPan to avoid hiding edittext when keyboard comes up, android:windowSoftInputMode="stateHidden"></activity>-->
+<!--        07112019, changed to adjustPan to avoid hiding edittext when keyboard comes up, android:windowSoftInputMode="stateHidden"></activity>-->
         <activity
             android:name="com.jovistar.caltxt.activity.TOS"
-            android:launchMode="singleTop"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait"
+            android:launchMode="singleTop"></activity>
         <activity
             android:name="com.jovistar.caltxt.activity.PhotoFullscreen"
             android:launchMode="singleTop"></activity>
         <activity
             android:name="com.jovistar.caltxt.activity.FAQ"
             android:label="@string/action_faq"
-            android:launchMode="singleTop"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:launchMode="singleTop">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.jovistar.caltxt.activity.CaltxtPager" />
@@ -149,8 +150,8 @@
         </activity>
         <activity
             android:name="com.jovistar.caltxt.activity.SplashScreen"
-            android:launchMode="singleTop"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -171,8 +172,8 @@
         <activity
             android:name="com.jovistar.caltxt.activity.AcknowledgementList"
             android:excludeFromRecents="true"
-            android:launchMode="singleInstance"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait"
+            android:launchMode="singleInstance"></activity>
 
         <activity
             android:name="com.jovistar.caltxt.activity.Profile"
@@ -189,11 +190,9 @@
         <!--<service android:name="com.jovistar.caltxt.service.WifiScanJob"-->
         <!--android:permission="android.permission.BIND_JOB_SERVICE"-->
         <!--android:exported="true" />-->
-        <service android:name="com.jovistar.caltxt.service.RebootService" android:label="RebootService">
-            <intent-filter>
-                <action android:name="com.jovistar.caltxt.service.RebootService" />
-            </intent-filter>
-        </service>
+        <service
+            android:name="com.jovistar.caltxt.service.RebootService"
+            android:enabled="true" />
         <!--service
             android:name="com.jovistar.caltxt.service.MessageService"
             android:enabled="true">
@@ -201,7 +200,7 @@
         <service
             android:name="org.eclipse.paho.android.service.MqttService"
             android:enabled="true"
-            android:stopWithTask="false" />
+            android:stopWithTask="false"/>
         <service
             android:name="com.jovistar.caltxt.firebase.storage.UploadService"
             android:enabled="true" />
@@ -244,7 +243,10 @@
             </intent-filter>
         </receiver-->
 
-        <receiver android:name="com.jovistar.caltxt.service.RebootReceiver">
+        <receiver
+            android:name="com.jovistar.caltxt.service.RebootReceiver"
+            android:enabled="true"
+            android:permission="android.permission.RECEIVE_BOOT_COMPLETED">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
