--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,20 @@
-include ':app', ':commons'
-rootProject.name='Caltxt'
+pluginManagement {
+    repositories {
+        gradlePluginPortal()
+        google()
+        mavenCentral()
+    }
+}
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositories {
+        google()
+        mavenCentral()
+        maven {
+            url "https://repo.eclipse.org/content/repositories/paho-snapshots/"
+        }
+    }
+}
+rootProject.name = "Caltxt"
+include ':app'
+include ':commons'
