--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,7 @@
-apply plugin: 'com.android.application'
+plugins {
+    id 'com.android.application'
+}
+
 
 android {
     signingConfigs {
@@ -9,17 +12,21 @@ android {
             keyAlias = 'keystore-android-20'
         }
     }
-    compileSdkVersion 31
-    buildToolsVersion "29.0.2"
+
+    namespace 'com.jovistar.caltxt'
+    compileSdk 33
+
     defaultConfig {
         applicationId "com.jovistar.caltxt"
-        minSdkVersion 26
-        targetSdkVersion 30
+        minSdk 21
+        targetSdk 33
         versionCode 1
         versionName "1.0"
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         signingConfig signingConfigs.debug
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -30,33 +37,31 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
+
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation platform('com.google.firebase:firebase-bom:30.4.1')
-    implementation 'com.google.firebase:firebase-auth'
-    implementation 'com.google.firebase:firebase-auth:+'
-    implementation 'com.google.firebase:firebase-messaging:+'
-    implementation 'com.google.firebase:firebase-database:+'
-    implementation 'com.google.firebase:firebase-storage:+'
-    implementation 'com.android.support:design:+'
-    implementation 'com.android.support:support-core-ui:+'
-    implementation 'com.android.support:support-core-utils:+'
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.preference:preference:1.0.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.gridlayout:gridlayout:1.0.0'
-    implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0'
-    implementation 'com.google.android.material:material:1.0.0'
-    implementation('org.eclipse.paho:org.eclipse.paho.android.service:+')
-    implementation('org.eclipse.paho:org.eclipse.paho.client.mqttv3:+')
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.2.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation fileTree(dir: 'E:\\backup\\com\\dev\\workspace\\Android\\TransportProvider', include: ['*.aar', '*.jar'], exclude: [])
+
+    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
     implementation project(path: ':commons')
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation platform('com.google.firebase:firebase-bom:30.4.1')
+    implementation 'com.google.firebase:firebase-auth:21.0.8'
+    implementation 'com.google.firebase:firebase-messaging:23.0.8'
+    implementation 'com.google.firebase:firebase-database:20.0.6'
+    implementation 'com.google.firebase:firebase-storage:20.0.2'
+    implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.5'
+    implementation 'org.eclipse.paho:org.eclipse.paho.android.service:1.1.1'
+    implementation 'androidx.preference:preference:1.2.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
